--- a/SP_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/SP_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -105,15 +105,16 @@ CurrentPosGridSize=1
 CurrentScalingGridSize=4
 
 [MRU]
-MRUItem0=/Game/Levels/assetlayout
-MRUItem1=/Game/Levels/BlockOut
-MRUItem2=/Game/Levels/MechanicsLevel
-MRUItem3=/Game/Levels/terrain_test
-MRUItem4=/Game/Levels/TerrainMap
-MRUItem5=/Game/Levels/Terrain-Test
-MRUItem6=/Game/Levels/test
-MRUItem7=/Game/Levels/Assetslayout
-MRUItem8=/Game/TopDownBP/Maps/TopDownExampleMap
+MRUItem0=/Game/Levels/texturedzoo
+MRUItem1=/Game/Levels/assetlayout
+MRUItem2=/Game/Levels/BlockOut
+MRUItem3=/Game/Levels/MechanicsLevel
+MRUItem4=/Game/Levels/terrain_test
+MRUItem5=/Game/Levels/TerrainMap
+MRUItem6=/Game/Levels/Terrain-Test
+MRUItem7=/Game/Levels/test
+MRUItem8=/Game/Levels/Assetslayout
+MRUItem9=/Game/TopDownBP/Maps/TopDownExampleMap
 
 [DetailCustomWidgetExpansion]
 CryptoKeysSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.SetDestination,InputSettings.Bindings.ActionMappings.HeavyAttack,InputSettings.Bindings.ActionMappings.LightAttack,InputSettings.Bindings.ActionMappings.Interact,InputSettings.Bindings.ActionMappings.Pause,
@@ -207,7 +208,7 @@ AssetDialog.CurrentViewType=1
 ContentBrowserTab1.SelectedPaths=/Game/Models/Dylan
 
 [EditorStartup]
-LastLevel=/Game/Levels/assetlayout
+LastLevel=/Game/Levels/texturedzoo
 
 [AssetEditorManager]
 CleanShutdown=False
@@ -1191,6 +1192,10 @@ LandscapeComponent.Cooking=True
 AssetViewerSettings.Film=False
 MaterialExpressionMultiply.MaterialExpressionMultiply=True
 MaterialExpressionMultiply.MaterialExpression=True
+MaterialEditorPreviewParameters.ParameterGroups=True
+StaticMeshActor.AssetUserData=True
+StaticMeshActor.Mobile=True
+StaticMeshActor.HLOD=True
 
 [AssetEditorToolkitTabLocation]
 /Game/TopDownBP/Blueprints/TopDownGameMode.TopDownGameMode=1
@@ -1245,6 +1250,22 @@ MaterialExpressionMultiply.MaterialExpression=True
 /Game/Models/Ben/small_bush.small_bush=1
 /Game/Models/weapons/bow/LP_bow.LP_bow=1
 /Game/Models/David/NewFolder2/NewMaterial.NewMaterial=1
+/Game/Models/finishedassets/archway/02_-_Default.02_-_Default=1
+/Game/Models/finishedassets/archway/Arch_way.Arch_way=1
+/Game/Models/finishedassets/brazier/brazier_Ben_Wilkinson.brazier_Ben_Wilkinson=1
+/Game/Models/finishedassets/chains/Chains_Unw.Chains_Unw=1
+/Game/Models/finishedassets/chains/01_-_Default.01_-_Default=1
+/Game/Models/finishedassets/chains_1/03_-_Default.03_-_Default=1
+/Game/Models/finishedassets/chains_1/Box011LightingMap.Box011LightingMap=1
+/Game/Models/finishedassets/fence/fence_post_default.fence_post_default=1
+/Game/Models/finishedassets/foodbags/01_-_Default_ncl1_1.01_-_Default_ncl1_1=1
+/Game/Models/finishedassets/obelisks/01_-_Default.01_-_Default=1
+/Game/Models/finishedassets/oven/01_-_Default.01_-_Default=1
+/Game/Models/finishedassets/chains_1/BALLANDCHAIN.BALLANDCHAIN=1
+/Game/Models/finishedassets/table/NewMaterial.NewMaterial=1
+/Game/Models/finishedassets/trent/Material__3.Material__3=1
+/Game/Models/finishedassets/weapontack/01_-_Default.01_-_Default=1
+/Game/Models/finishedassets/rocks/NewMaterial.NewMaterial=1
 
 [PluginBrowser]
 InstalledPlugins=Substance
@@ -1278,6 +1299,7 @@ GeomModifier="\"Object.Settings\" "
 GeomModifier_Clip="\"Object.Settings\" "
 EditorLoadingSavingSettings="\"Object.AutoReimport\" \"Object.Blueprints\" \"Object.AutoSave\" "
 AnalyticsPrivacySettings="\"Object.Options.bSendUsageData\" "
+StaticMeshActor="\"Object.StaticMeshActor.StaticMeshComponent.Object.Lighting.LightmassSettings\" "
 
 [DetailCategoriesAdvanced]
 TopDownCharacter_C.Collision=True
@@ -2032,26 +2054,26 @@ LastLogListing=FBXImport
 /Game/Models=(R=1.000000,G=0.457670,B=0.000000,A=1.000000)
 
 [PlacementMode]
-RecentlyPlaced=/Game/Models/Chris/Cart_Wheel_-_Unwrapped_-_Chris_-_01-05-19.Cart_Wheel_-_Unwrapped_-_Chris_-_01-05-19;
-RecentlyPlaced=/Game/Models/Jack/Life_Pot.Life_Pot;
-RecentlyPlaced=/Game/Models/Jack/Rage_Pot.Rage_Pot;
-RecentlyPlaced=/Game/Models/Jack/Potion_Small.Potion_Small;
-RecentlyPlaced=/Game/Models/Jack/Potion_Med.Potion_Med;
-RecentlyPlaced=/Game/Models/Jack/Potion_Large.Potion_Large;
-RecentlyPlaced=/Game/Models/Andrew/scaffold08-andrew-11-01-19.scaffold08-andrew-11-01-19;
-RecentlyPlaced=/Game/Models/Andrew/scaffold06-andrew-11-01-19.scaffold06-andrew-11-01-19;
-RecentlyPlaced=/Game/Models/Andrew/scaffold09-andrew-11-01-19.scaffold09-andrew-11-01-19;
-RecentlyPlaced=/Game/Models/Andrew/tent_low.tent_low;
-RecentlyPlaced=/Game/Models/Andrew/scaffold05-andrew-11-01-19.scaffold05-andrew-11-01-19;
-RecentlyPlaced=/Game/Models/Andrew/scaffold04-andrew-11-01-19.scaffold04-andrew-11-01-19;
-RecentlyPlaced=/Game/Models/David/NewFolder/LP_barrel.LP_barrel;
-RecentlyPlaced=/Game/Models/David/NewFolder2/NewMaterial.NewMaterial;
-RecentlyPlaced=/Game/Models/David/NewFolder2/LP_Area1_Crate.LP_Area1_Crate;
-RecentlyPlaced=/Game/Models/Ben/small_cactus.small_cactus;
-RecentlyPlaced=/Game/Models/Ben/medium_cactus.medium_cactus;
-RecentlyPlaced=/Game/Models/Ben/large_cactus.large_cactus;
-RecentlyPlaced=/Game/Models/David/LP_foliage.LP_foliage;
-RecentlyPlaced=/Game/Models/David/LP_Palm_tree.LP_Palm_tree;
+RecentlyPlaced=/Game/Models/finishedassets/chains_1/BALLANDCHAIN.BALLANDCHAIN;
+RecentlyPlaced=/Game/Models/finishedassets/rocks/NewMaterial.NewMaterial;
+RecentlyPlaced=/Game/Models/finishedassets/rocks/Singlerock4.Singlerock4;
+RecentlyPlaced=/Game/Models/finishedassets/rocks/Singlerock3.Singlerock3;
+RecentlyPlaced=/Game/Models/finishedassets/rocks/Singlerock2.Singlerock2;
+RecentlyPlaced=/Game/Models/finishedassets/rocks/Singlerock.Singlerock;
+RecentlyPlaced=/Game/Models/finishedassets/rocks/Rocks_Small_3.Rocks_Small_3;
+RecentlyPlaced=/Game/Models/finishedassets/rocks/Rocks_Small_2.Rocks_Small_2;
+RecentlyPlaced=/Game/Models/finishedassets/archway/Arch_way.Arch_way;
+RecentlyPlaced=/Game/Models/finishedassets/rocks/Rocks_Small.Rocks_Small;
+RecentlyPlaced=/Game/Models/finishedassets/rocks/Rocks_Large2.Rocks_Large2;
+RecentlyPlaced=/Game/Models/finishedassets/rocks/Rocks_Large_3.Rocks_Large_3;
+RecentlyPlaced=/Game/Models/finishedassets/rocks/Rocks_Large.Rocks_Large;
+RecentlyPlaced=/Game/Models/finishedassets/weapontack/WR_Un.WR_Un;
+RecentlyPlaced=/Game/Models/finishedassets/trent/Material__3.Material__3;
+RecentlyPlaced=/Game/Models/finishedassets/trent/tent_roof_low.tent_roof_low;
+RecentlyPlaced=/Game/Models/finishedassets/trent/tent_open_low.tent_open_low;
+RecentlyPlaced=/Game/Models/finishedassets/tree/LP_Palm_tree.LP_Palm_tree;
+RecentlyPlaced=/Game/Models/finishedassets/table/NewMaterial.NewMaterial;
+RecentlyPlaced=/Game/Models/finishedassets/table/Table.Table;
 
 [/Script/UnrealEd.MaterialEditorOptions]
 bUseUnsortedMenus=False
@@ -2204,26 +2226,26 @@ ImportRotation=(Pitch=0.000000,Yaw=0.000000,Roll=0.000000)
 ImportUniformScale=1.000000
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Levels/assetlayout
-MRUItem1=/Game/Models/finishedassets/chains/Chains
-MRUItem2=/Game/Levels/BlockOut
-MRUItem3=/Game/Levels/MechanicsLevel
-MRUItem4=/Game/Levels/terrain_test
-MRUItem5=/Game/Levels/TerrainMap
-MRUItem6=/Game/Models/David/NewFolder2/NewMaterial
-MRUItem7=/Game/Models/weapons/bow/LP_bow
-MRUItem8=/Game/Models/weapons/shield
-MRUItem9=/Game/Models/weapons/shortsword
-MRUItem10=/Game/Models/weapons/LP_dagger
-MRUItem11=/Game/Models/Chris/Wheelbarrow2_-_Unwrapped_-_Chris_-_01-05-19
-MRUItem12=/Game/Models/Ben/small_bush
-MRUItem13=/Game/Models/Ben/02_-_Default
-MRUItem14=/Game/Models/David/LP_foliage
-MRUItem15=/Game/Models/David/02_-_Default
-MRUItem16=/Game/Models/David/LP_Palm_tree
-MRUItem17=/Game/Models/David/crate-david-14-01-19
-MRUItem18=/Game/Models/David/LP_barrel
-MRUItem19=/Game/Models/David/Material_005
+MRUItem0=/Game/Models/finishedassets/archway/Arch_way
+MRUItem1=/Game/Models/finishedassets/archway/02_-_Default
+MRUItem2=/Game/Models/finishedassets/chains_1/03_-_Default
+MRUItem3=/Game/Models/finishedassets/chains_1/BALLANDCHAIN
+MRUItem4=/Game/Models/finishedassets/rocks/NewMaterial
+MRUItem5=/Game/Models/finishedassets/weapontack/01_-_Default
+MRUItem6=/Game/Models/finishedassets/trent/Material__3
+MRUItem7=/Game/Models/finishedassets/table/NewMaterial
+MRUItem8=/Game/Models/finishedassets/oven/01_-_Default
+MRUItem9=/Game/Models/finishedassets/obelisks/01_-_Default
+MRUItem10=/Game/Models/finishedassets/ladders/01_-_Default
+MRUItem11=/Game/Models/finishedassets/foodbags/01_-_Default_ncl1_1
+MRUItem12=/Game/Models/finishedassets/fence/fence_post_default
+MRUItem13=/Game/Models/finishedassets/chains_1/Box011LightingMap
+MRUItem14=/Game/Models/finishedassets/chains/01_-_Default
+MRUItem15=/Game/Models/finishedassets/chains/Chains_Unw
+MRUItem16=/Game/Models/finishedassets/brazier/brazier_Ben_Wilkinson
+MRUItem17=/Game/Models/finishedassets/ankh/NewMaterial
+MRUItem18=/Game/Levels/texturedzoo
+MRUItem19=/Game/Levels/assetlayout
 
 [/Script/UnrealEd.FbxImportUI]
 LodDistance0=0.000000
