--- a/SP_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/SP_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -104,9 +104,9 @@ CurrentRotGridSize=0
 CurrentPosGridSize=4
 
 [MRU]
-MRUItem0=/Game/TopDownBP/Maps/TopDownExampleMap
-MRUItem1=/Game/Levels/MechanicsLevel
-MRUItem2=/Game/Levels/Demo
+MRUItem0=/Game/Levels/Demo
+MRUItem1=/Game/TopDownBP/Maps/TopDownExampleMap
+MRUItem2=/Game/Levels/MechanicsLevel
 MRUItem3=/Game/Levels/MainMenu
 MRUItem4=/Game/Chloe/UI/Main_Menu_level/Main_Menu
 MRUItem5=/Game/Levels/TerrainMap
@@ -189,7 +189,7 @@ UserDefinedStruct=
 BoxComponent=BoxComponent.Collision.Collision,
 TargetDummy_C=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,
 NameProperty=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,
-SpawnPoint_C=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,
+SpawnPoint_C=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,
 AttackPlayer_C=
 Door_C=
 NavigationSystemV1=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.SetDestination,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.MoveForward,InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings.TurnRate,InputSettings.Bindings.ActionMappings.Sprint,InputSettings.Bindings.ActionMappings.Interact,InputSettings.Bindings.ActionMappings.Pause,
@@ -219,6 +219,7 @@ TopDownCharacterCleaned_C=TopDownCharacter_C.Collision.Collision,StructProperty.
 Inventory_C=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,
 MapProperty=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,
 BaseShield_C=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,
+K2Node_FunctionEntry=K2Node_FunctionEntry.Inputs.InputArgument0,
 
 [ContentBrowser]
 ContentBrowserTab1.SourcesExpanded=True
@@ -242,20 +243,21 @@ AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
-ContentBrowserTab1.SelectedPaths=/Game/GW000979/DataStruct/BaseEquipment
+ContentBrowserTab1.SelectedPaths=/Game/AIAgent
 
 [EditorStartup]
-LastLevel=/Game/TopDownBP/Maps/TopDownExampleMap
+LastLevel=/Game/Levels/Demo
 
 [AssetEditorManager]
 CleanShutdown=True
+OpenAssetsAtExit=/Game/T019847G/DeathZone.DeathZone
 OpenAssetsAtExit=/Game/TopDownBP/Blueprints/TopDownCharacter.TopDownCharacter
-OpenAssetsAtExit=/Game/GW000979/DataStruct/Inventory.Inventory
-OpenAssetsAtExit=/Game/GW000979/DataStruct/BaseEquipment/BaseAccessory.BaseAccessory
-OpenAssetsAtExit=/Game/c024816h/PickUpInterface.PickUpInterface
-OpenAssetsAtExit=/Game/GW000979/DataStruct/BaseEquipment/BaseShield.BaseShield
-OpenAssetsAtExit=/Game/GW000979/DataStruct/BaseEquipment/BaseArmour.BaseArmour
+OpenAssetsAtExit=/Game/SpawnActor/SpawnPoint.SpawnPoint
 OpenAssetsAtExit=/Game/GW000979/DataStruct/BaseEquipment/BaseWeapon.BaseWeapon
+OpenAssetsAtExit=/Game/GW000979/DataStruct/DataTables/WeaponDataHuman.WeaponDataHuman
+OpenAssetsAtExit=/Game/AIAgent/DerivedClasses/RangedAI.RangedAI
+OpenAssetsAtExit=/Game/AIAgent/Baseprojectile.Baseprojectile
+OpenAssetsAtExit=/Game/AIAgent/I_Projectile.I_Projectile
 
 [DetailCategories]
 TopDownCharacter_C.TransformCommon=True
@@ -2503,6 +2505,18 @@ BaseArmour_C.Rendering=True
 BaseArmour_C.Replication=True
 BaseArmour_C.Input=True
 BaseArmour_C.Actor=True
+DeathZone_C.Tick=True
+DeathZone_C.Default=True
+DeathZone_C.Rendering=True
+DeathZone_C.Replication=True
+DeathZone_C.Input=True
+DeathZone_C.Actor=True
+WeaponDropHuman_C.TransformCommon=True
+WeaponDropHuman_C.Default=True
+WeaponDropHuman_C.Rendering=True
+WeaponDropHuman_C.Input=True
+WeaponDropHuman_C.Actor=True
+DeathZone_C.TransformCommon=True
 
 [AssetEditorToolkitTabLocation]
 /Game/TopDownBP/Blueprints/TopDownGameMode.TopDownGameMode=0
@@ -2584,7 +2598,7 @@ InstalledPlugins=Substance
 
 [DetailPropertyExpansion]
 EndUserSettings="\"Object.Privacy.bSendAnonymousUsageDataToEpic\" "
-Object="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
+Object=
 SphereComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 ShapeComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 PrimitiveComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
@@ -2597,8 +2611,8 @@ Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 NavMeshBoundsVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 AIbot_C=
-Character="\"Object.CharacterMovement\" \"Object.CharacterMovement\" "
-Pawn="\"Object.CharacterMovement\" \"Object.CharacterMovement\" "
+Character=
+Pawn=
 REINST_AIbot_C_315="\"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
 REINST_AIbot_C_376="\"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
 Perception_C="\"Object.TargetEnemy\" \"Object.TargetEnemy\" "
@@ -2612,7 +2626,7 @@ NewController_C="\"Object.Controller.Controller"
 AIController="\"Object.Default.DebugColour\" "
 Controller="\"Object.Default.DebugColour\" "
 REINST_TestPawn_C_579="\"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
-TopDownCharacter_C="\"Object.CharacterMovement\" \"Object.CharacterMovement\" "
+TopDownCharacter_C=
 REINST_TestPawn_C_585="\"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
 REINST_TestPawn_C_603="\"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
 REINST_TestPawn_C_609="\"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
@@ -2637,7 +2651,7 @@ TopDownCharacterTest_C=
 ShaneToyeSprintTest_C=
 BoxComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 TargetDummy_C=
-SpawnPoint_C=
+SpawnPoint_C="\"Object.AIType\" \"Object.AIType\" "
 AttackPlayer_C=
 BTTask_BlueprintBase=
 BTTaskNode=
@@ -2674,7 +2688,7 @@ KillZVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 PhysicsVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 BaseArmour_C=
 BaseAccessory_C=
-Calc Offence Stats="\"Struct.Temp Status\" "
+Calc Offence Stats="\"Struct.TempDamage\" "
 Calc Defence Stats="\"Struct.TempCritRes\" "
 TopDownGameMode_C=
 GameModeBase=
@@ -2706,7 +2720,7 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
-UNR=../../../../../../Users/gw000979/Documents/GitHub/SCollab-Proto/SP_Prototype/Content/TopDownBP/Maps
+UNR=../../../../../../Users/t019847g/Documents/GitHub/SCollab-Proto/SP_Prototype/Content/Levels
 BRUSH=../../../../../My Documents/Unreal Projects/SP_Prototype/Content/
 FBX=../../../../../My Documents/Unreal Projects/SP_Prototype/Content/
 FBXAnim=../../../../../My Documents/Unreal Projects/SP_Prototype/Content/
@@ -3430,6 +3444,7 @@ LastLogListing=PIE
 /Game/Materials=(R=0.500000,G=0.240541,B=0.050361,A=1.000000)
 
 [PlacementMode]
+RecentlyPlaced=/Game/GW000979/Weapons/WeaponDropHuman.WeaponDropHuman;
 RecentlyPlaced=/Script/Engine.KillZVolume;/Engine/Transient.ActorFactoryBoxVolume_11
 RecentlyPlaced=/Script/Engine.TextRenderActor;/Engine/Transient.ActorFactoryTextRender_0
 RecentlyPlaced=/Game/AIAgent/DerivedClasses/RangedAI.RangedAI;
@@ -3449,7 +3464,6 @@ RecentlyPlaced=/Game/AIAgent/AIbot.AIbot;
 RecentlyPlaced=/Game/GW000979/DataStruct/TargetDummy/TargetDummy.TargetDummy;
 RecentlyPlaced=/Game/GW000979/ShaneToyeSprintTest.ShaneToyeSprintTest;
 RecentlyPlaced=/Game/GW000979/TopDownCharacterTest.TopDownCharacterTest;
-RecentlyPlaced=/Game/GW000979/DataStruct/TargetDummy/TestDrop.TestDrop;
 
 [/Script/UnrealEd.MaterialEditorOptions]
 bUseUnsortedMenus=False
@@ -3500,26 +3514,26 @@ PaletteThumbnailScale=0.300000
 PreserveScaleRatio=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/GW000979/DataStruct/BaseEquipment/BaseWeapon
-MRUItem1=/Game/GW000979/DataStruct/BaseEquipment/BaseArmour
-MRUItem2=/Game/GW000979/DataStruct/BaseEquipment/BaseAccessory
-MRUItem3=/Game/GW000979/DataStruct/BaseEquipment/BaseShield
-MRUItem4=/Game/GW000979/DataStruct/Structs/AccessoryStruct
-MRUItem5=/Game/GW000979/DataStruct/Structs/Armour_Struct
-MRUItem6=/Game/Chloe/UI/I_InventoryInterface
-MRUItem7=/Game/c024816h/PickUpInterface
-MRUItem8=/Game/GW000979/DataStruct/WeaponInt
-MRUItem9=/Game/GW000979/DataStruct/WeaponInt2
-MRUItem10=/Game/AIAgent/AIbot
-MRUItem11=/Game/AIAgent/BaseAI
-MRUItem12=/Game/GW000979/DataStruct/Inventory
-MRUItem13=/Game/TopDownBP/Blueprints/TopDownCharacter
-MRUItem14=/Game/TopDownBP/Blueprints/TopDownGameMode
-MRUItem15=/Game/TopDownBP/Blueprints/I_DeathSystem
-MRUItem16=/Game/TopDownBP/Blueprints/TopDownCharacterCleaned
-MRUItem17=/Game/Levels/MechanicsLevel
-MRUItem18=/Game/GW000979/DataStruct/Structs/Weapon_Struct
-MRUItem19=/Game/GW000979/DataStruct/DataTables/ArmourDataTable
+MRUItem0=/Game/AIAgent/I_Projectile
+MRUItem1=/Game/AIAgent/Baseprojectile
+MRUItem2=/Game/AIAgent/DerivedClasses/RangedAI
+MRUItem3=/Game/GW000979/DataStruct/DataTables/WeaponDataHuman
+MRUItem4=/Game/GW000979/DataStruct/BaseEquipment/BaseWeapon
+MRUItem5=/Game/SpawnActor/SpawnPoint
+MRUItem6=/Game/TopDownBP/Blueprints/TopDownCharacter
+MRUItem7=/Game/T019847G/DeathZone
+MRUItem8=/Game/Levels/Demo
+MRUItem9=/Game/GW000979/DataStruct/BaseEquipment/BaseArmour
+MRUItem10=/Game/GW000979/DataStruct/BaseEquipment/BaseAccessory
+MRUItem11=/Game/GW000979/DataStruct/BaseEquipment/BaseShield
+MRUItem12=/Game/GW000979/DataStruct/Structs/AccessoryStruct
+MRUItem13=/Game/GW000979/DataStruct/Structs/Armour_Struct
+MRUItem14=/Game/Chloe/UI/I_InventoryInterface
+MRUItem15=/Game/c024816h/PickUpInterface
+MRUItem16=/Game/GW000979/DataStruct/WeaponInt
+MRUItem17=/Game/GW000979/DataStruct/WeaponInt2
+MRUItem18=/Game/AIAgent/AIbot
+MRUItem19=/Game/AIAgent/BaseAI
 
 [WidgetTemplatesExpanded]
 Extra=False
