--- a/SP_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/SP_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -103,6 +103,7 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettin
 CurrentRotGridSize=0
 CurrentPosGridSize=1
 CurrentScalingGridSize=4
+CameraSpeed=2
 
 [MRU]
 MRUItem0=/Game/Levels/texturedzoo
@@ -199,19 +200,19 @@ FavoritePaths=
 ContentBrowserTab1.CollectionsExpanded=True
 ContentBrowserTab1.SelectedCollections=
 ContentBrowserTab1.ExpandedCollections=
-ContentBrowserTab1.ThumbnailSizeScale=0.080000
+ContentBrowserTab1.ThumbnailSizeScale=0.230000
 ContentBrowserTab1.CurrentViewType=1
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
-ContentBrowserTab1.SelectedPaths=/Game/Models/Dylan
+ContentBrowserTab1.SelectedPaths=/Game/Models/finishedassets/chains_1
 
 [EditorStartup]
 LastLevel=/Game/Levels/texturedzoo
 
 [AssetEditorManager]
-CleanShutdown=False
+CleanShutdown=True
 
 [DetailCategories]
 TopDownCharacter_C.TransformCommon=True
@@ -1308,7 +1309,7 @@ FbxImportUI.Mesh=True
 Brush.BrushSettings=True
 
 [RootWindow]
-ScreenPosition=X=-1407.000 Y=611.000
+ScreenPosition=X=504.000 Y=152.000
 WindowSize=X=1280.000 Y=720.000
 InitiallyMaximized=True
 
