--- a/SP_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/SP_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -104,9 +104,9 @@ CurrentRotGridSize=0
 CurrentPosGridSize=4
 
 [MRU]
-MRUItem0=/Game/TopDownBP/Maps/TopDownExampleMap
-MRUItem1=/Game/Levels/MechanicsLevel
-MRUItem2=/Game/Levels/Demo
+MRUItem0=/Game/Levels/Demo
+MRUItem1=/Game/TopDownBP/Maps/TopDownExampleMap
+MRUItem2=/Game/Levels/MechanicsLevel
 MRUItem3=/Game/Levels/MainMenu
 MRUItem4=/Game/Chloe/UI/Main_Menu_level/Main_Menu
 MRUItem5=/Game/Levels/TerrainMap
@@ -242,20 +242,13 @@ AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
-ContentBrowserTab1.SelectedPaths=/Game/GW000979/DataStruct/BaseEquipment
 
 [EditorStartup]
-LastLevel=/Game/TopDownBP/Maps/TopDownExampleMap
+LastLevel=/Game/Levels/Demo
 
 [AssetEditorManager]
 CleanShutdown=True
-OpenAssetsAtExit=/Game/TopDownBP/Blueprints/TopDownCharacter.TopDownCharacter
-OpenAssetsAtExit=/Game/GW000979/DataStruct/Inventory.Inventory
-OpenAssetsAtExit=/Game/GW000979/DataStruct/BaseEquipment/BaseAccessory.BaseAccessory
-OpenAssetsAtExit=/Game/c024816h/PickUpInterface.PickUpInterface
-OpenAssetsAtExit=/Game/GW000979/DataStruct/BaseEquipment/BaseShield.BaseShield
 OpenAssetsAtExit=/Game/GW000979/DataStruct/BaseEquipment/BaseArmour.BaseArmour
-OpenAssetsAtExit=/Game/GW000979/DataStruct/BaseEquipment/BaseWeapon.BaseWeapon
 
 [DetailCategories]
 TopDownCharacter_C.TransformCommon=True
@@ -2503,6 +2496,23 @@ BaseArmour_C.Rendering=True
 BaseArmour_C.Replication=True
 BaseArmour_C.Input=True
 BaseArmour_C.Actor=True
+BaseShield_C.Default=True
+HierarchicalInstancedStaticMeshComponent.Variable=True
+HierarchicalInstancedStaticMeshComponent.TransformCommon=True
+HierarchicalInstancedStaticMeshComponent.Sockets=True
+HierarchicalInstancedStaticMeshComponent.StaticMesh=True
+HierarchicalInstancedStaticMeshComponent.Instances=True
+HierarchicalInstancedStaticMeshComponent.InstancedStaticMeshComponent=True
+HierarchicalInstancedStaticMeshComponent.Culling=True
+HierarchicalInstancedStaticMeshComponent.Physics=True
+HierarchicalInstancedStaticMeshComponent.Collision=True
+HierarchicalInstancedStaticMeshComponent.Lighting=True
+HierarchicalInstancedStaticMeshComponent.Rendering=True
+HierarchicalInstancedStaticMeshComponent.Tags=True
+HierarchicalInstancedStaticMeshComponent.ComponentReplication=True
+HierarchicalInstancedStaticMeshComponent.Cooking=True
+HierarchicalInstancedStaticMeshComponent.Events=True
+AccessoryStruct.None=True
 
 [AssetEditorToolkitTabLocation]
 /Game/TopDownBP/Blueprints/TopDownGameMode.TopDownGameMode=0
@@ -2578,6 +2588,12 @@ BaseArmour_C.Actor=True
 /Game/GW000979/DataStruct/WeaponInt2.WeaponInt2=0
 /Game/GW000979/DataStruct/WeaponInt.WeaponInt=0
 /Game/Chloe/UI/I_InventoryInterface.I_InventoryInterface=0
+/Game/GW000979/DataStruct/BaseEquipment/BaseShield.BaseShield=0
+/Game/GW000979/DataStruct/DataTables/WeaponDataMonster.WeaponDataMonster=0
+/Game/GW000979/DataStruct/DataTables/WeaponDataHuman.WeaponDataHuman=0
+/Game/GW000979/DataStruct/BaseEquipment/BaseAccessory.BaseAccessory=0
+/Game/GW000979/DataStruct/DataTables/ShieldDataTable.ShieldDataTable=0
+/Game/GW000979/DataStruct/DataTables/AccessoryDataTable.AccessoryDataTable=0
 
 [PluginBrowser]
 InstalledPlugins=Substance
@@ -2681,6 +2697,7 @@ GameModeBase=
 Info=
 TopDownCharacterCleaned_C="\"Object.CrystalPowerGeneration\" \"Object.CrystalPowerGeneration\" "
 Inventory_C=
+BaseShield_C="\"Object.RNG\" \"Object.RNG\" "
 
 [DetailCategoriesAdvanced]
 TopDownCharacter_C.Collision=True
@@ -2706,7 +2723,7 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
-UNR=../../../../../../Users/gw000979/Documents/GitHub/SCollab-Proto/SP_Prototype/Content/TopDownBP/Maps
+UNR=../../../../../../Users/gw000979/Documents/GitHub/SCollab-Proto/SP_Prototype/Content/Levels
 BRUSH=../../../../../My Documents/Unreal Projects/SP_Prototype/Content/
 FBX=../../../../../My Documents/Unreal Projects/SP_Prototype/Content/
 FBXAnim=../../../../../My Documents/Unreal Projects/SP_Prototype/Content/
@@ -3500,26 +3517,26 @@ PaletteThumbnailScale=0.300000
 PreserveScaleRatio=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/GW000979/DataStruct/BaseEquipment/BaseWeapon
-MRUItem1=/Game/GW000979/DataStruct/BaseEquipment/BaseArmour
-MRUItem2=/Game/GW000979/DataStruct/BaseEquipment/BaseAccessory
-MRUItem3=/Game/GW000979/DataStruct/BaseEquipment/BaseShield
-MRUItem4=/Game/GW000979/DataStruct/Structs/AccessoryStruct
-MRUItem5=/Game/GW000979/DataStruct/Structs/Armour_Struct
-MRUItem6=/Game/Chloe/UI/I_InventoryInterface
-MRUItem7=/Game/c024816h/PickUpInterface
-MRUItem8=/Game/GW000979/DataStruct/WeaponInt
-MRUItem9=/Game/GW000979/DataStruct/WeaponInt2
-MRUItem10=/Game/AIAgent/AIbot
-MRUItem11=/Game/AIAgent/BaseAI
-MRUItem12=/Game/GW000979/DataStruct/Inventory
-MRUItem13=/Game/TopDownBP/Blueprints/TopDownCharacter
-MRUItem14=/Game/TopDownBP/Blueprints/TopDownGameMode
-MRUItem15=/Game/TopDownBP/Blueprints/I_DeathSystem
-MRUItem16=/Game/TopDownBP/Blueprints/TopDownCharacterCleaned
-MRUItem17=/Game/Levels/MechanicsLevel
-MRUItem18=/Game/GW000979/DataStruct/Structs/Weapon_Struct
-MRUItem19=/Game/GW000979/DataStruct/DataTables/ArmourDataTable
+MRUItem0=/Game/GW000979/DataStruct/DataTables/AccessoryDataTable
+MRUItem1=/Game/GW000979/DataStruct/DataTables/ShieldDataTable
+MRUItem2=/Game/GW000979/DataStruct/DataTables/WeaponDataHuman
+MRUItem3=/Game/GW000979/DataStruct/BaseEquipment/BaseAccessory
+MRUItem4=/Game/GW000979/DataStruct/DataTables/WeaponDataMonster
+MRUItem5=/Game/GW000979/DataStruct/BaseEquipment/BaseArmour
+MRUItem6=/Game/GW000979/DataStruct/BaseEquipment/BaseShield
+MRUItem7=/Game/Levels/Demo
+MRUItem8=/Game/GW000979/DataStruct/BaseEquipment/BaseWeapon
+MRUItem9=/Game/GW000979/DataStruct/Structs/AccessoryStruct
+MRUItem10=/Game/GW000979/DataStruct/Structs/Armour_Struct
+MRUItem11=/Game/Chloe/UI/I_InventoryInterface
+MRUItem12=/Game/c024816h/PickUpInterface
+MRUItem13=/Game/GW000979/DataStruct/WeaponInt
+MRUItem14=/Game/GW000979/DataStruct/WeaponInt2
+MRUItem15=/Game/AIAgent/AIbot
+MRUItem16=/Game/AIAgent/BaseAI
+MRUItem17=/Game/GW000979/DataStruct/Inventory
+MRUItem18=/Game/TopDownBP/Blueprints/TopDownCharacter
+MRUItem19=/Game/TopDownBP/Blueprints/TopDownGameMode
 
 [WidgetTemplatesExpanded]
 Extra=False
@@ -3544,6 +3561,7 @@ bCanPreviewSwapAspectRatio=False
 [SuppressableDialogs]
 ExtrudeCoordsWarning=False
 ChangeVariableType_Warning=False
+DeleteVariableInUse_Warning=False
 
 [/Script/UnrealEd.FbxImportUI]
 LodDistance0=0.000000
