Stat calculations done

--- a/SP_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/SP_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -224,6 +224,8 @@ K2Node_FunctionEntry=K2Node_FunctionEntry.Inputs.InputArgument0,
 Baseprojectile_C=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,
 WeaponDropHuman_C=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,
 BasePickUp_C=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,
+Calc Utlity Stats=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,
+CharacterMovementComponent=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,
 
 [ContentBrowser]
 ContentBrowserTab1.SourcesExpanded=True
@@ -247,23 +249,13 @@ AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
-ContentBrowserTab1.SelectedPaths=/Game/c024816h
 
 [EditorStartup]
-LastLevel=/Game/Levels/Demo
+LastLevel=/Game/TopDownBP/Maps/TopDownExampleMap
 
 [AssetEditorManager]
 CleanShutdown=True
-OpenAssetsAtExit=/Game/TopDownBP/Blueprints/TopDownGameMode.TopDownGameMode
-OpenAssetsAtExit=/Game/T019847G/DeathZone.DeathZone
 OpenAssetsAtExit=/Game/TopDownBP/Blueprints/TopDownCharacter.TopDownCharacter
-OpenAssetsAtExit=/Game/AIAgent/Baseprojectile.Baseprojectile
-OpenAssetsAtExit=/Game/AIAgent/I_Projectile.I_Projectile
-OpenAssetsAtExit=/Game/AIAgent/DerivedClasses/RangedAI.RangedAI
-OpenAssetsAtExit=/Game/SpawnActor/SpawnPoint.SpawnPoint
-OpenAssetsAtExit=/Game/c024816h/LargeHealthPotion.LargeHealthPotion
-OpenAssetsAtExit=/Game/GW000979/DataStruct/DataTables/WeaponDataHuman.WeaponDataHuman
-OpenAssetsAtExit=/Game/c024816h/BasePickUp.BasePickUp
 
 [DetailCategories]
 TopDownCharacter_C.TransformCommon=True
@@ -2651,12 +2643,12 @@ InstalledPlugins=Substance
 
 [DetailPropertyExpansion]
 EndUserSettings="\"Object.Privacy.bSendAnonymousUsageDataToEpic\" "
-Object="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
+Object=
 SphereComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 ShapeComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 PrimitiveComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 SceneComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
-ActorComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
+ActorComponent=
 BlackboardData="\"Object.Blackboard\" \"Object.Blackboard.Keys.Keys[0].KeyType\" "
 DataAsset="\"Object.Blackboard\" \"Object.Blackboard.Keys.Keys[0].KeyType\" "
 PreviewMeshCollection="\"Object.SkeletalMeshes\" \"Object.SkeletalMeshes\" "
@@ -2739,10 +2731,10 @@ RangedAI_C="\"Object.\" \"Object.\" "
 BaseAI_C="\"Object.\" \"Object.\" "
 KillZVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 PhysicsVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
-BaseArmour_C=
-BaseAccessory_C=
+BaseArmour_C="\"Object.ArmourStats\" \"Object.ArmourStats\" "
+BaseAccessory_C="\"Object.Accessory Stats\" \"Object.Accessory Stats\" "
 Calc Offence Stats="\"Struct.TempDamage\" "
-Calc Defence Stats="\"Struct.TempCritRes\" "
+Calc Defence Stats="\"Struct.TempArmour\" "
 TopDownGameMode_C=
 GameModeBase=
 Info=
@@ -2750,6 +2742,8 @@ TopDownCharacterCleaned_C="\"Object.CrystalPowerGeneration\" \"Object.CrystalPow
 Inventory_C=
 Baseprojectile_C="\"Object.\" \"Object.\" "
 BasePickUp_C=
+BaseShield_C="\"Object.ArmourStats\" \"Object.ArmourStats\" "
+Calc Utlity Stats="\"Struct.TempVitality\" "
 
 [DetailCategoriesAdvanced]
 TopDownCharacter_C.Collision=True
@@ -3492,7 +3486,7 @@ WeldedVertices=True
 MapSkeletalMotionToRoot=False
 
 [MessageLog]
-LastLogListing=PIE
+LastLogListing=LoadErrors
 
 [PathColor]
 /Game/Levels=(R=1.000000,G=0.457670,B=0.000000,A=1.000000)
@@ -3569,19 +3563,19 @@ PaletteThumbnailScale=0.300000
 PreserveScaleRatio=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/c024816h/Elixir
-MRUItem1=/Game/c024816h/VitalityPotion
-MRUItem2=/Game/c024816h/BottledRage
-MRUItem3=/Game/c024816h/BasePickUp
-MRUItem4=/Game/c024816h/LargeHealthPotion
-MRUItem5=/Game/TopDownBP/Interactexample/Door
-MRUItem6=/Game/GW000979/DataStruct/DataTables/WeaponDataHuman
-MRUItem7=/Game/GW000979/Weapons/WeaponDropHuman
-MRUItem8=/Game/SpawnActor/SpawnPoint
-MRUItem9=/Game/AIAgent/DerivedClasses/RangedAI
-MRUItem10=/Game/AIAgent/I_Projectile
-MRUItem11=/Game/AIAgent/Baseprojectile
-MRUItem12=/Game/TopDownBP/Blueprints/TopDownCharacter
+MRUItem0=/Game/TopDownBP/Blueprints/TopDownCharacter
+MRUItem1=/Game/c024816h/Elixir
+MRUItem2=/Game/c024816h/VitalityPotion
+MRUItem3=/Game/c024816h/BottledRage
+MRUItem4=/Game/c024816h/BasePickUp
+MRUItem5=/Game/c024816h/LargeHealthPotion
+MRUItem6=/Game/TopDownBP/Interactexample/Door
+MRUItem7=/Game/GW000979/DataStruct/DataTables/WeaponDataHuman
+MRUItem8=/Game/GW000979/Weapons/WeaponDropHuman
+MRUItem9=/Game/SpawnActor/SpawnPoint
+MRUItem10=/Game/AIAgent/DerivedClasses/RangedAI
+MRUItem11=/Game/AIAgent/I_Projectile
+MRUItem12=/Game/AIAgent/Baseprojectile
 MRUItem13=/Game/T019847G/DeathZone
 MRUItem14=/Game/TopDownBP/Blueprints/TopDownGameMode
 MRUItem15=/Game/Levels/Demo
