--- a/SP_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/SP_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -104,15 +104,15 @@ CurrentRotGridSize=0
 CurrentPosGridSize=4
 
 [MRU]
-MRUItem0=/Game/TopDownBP/Maps/TopDownExampleMap
-MRUItem1=/Game/Levels/texturedzoo
+MRUItem0=/Game/Levels/MechanicsLevel
+MRUItem1=/Game/Levels/BlockOut
 MRUItem2=/Game/Levels/assetlayout
-MRUItem3=/Game/Levels/MechanicsLevel
-MRUItem4=/Game/Levels/Demo
-MRUItem5=/Game/Levels/MainMenu
-MRUItem6=/Game/Chloe/UI/Main_Menu_level/Main_Menu
-MRUItem7=/Game/Levels/TerrainMap
-MRUItem8=/Game/Levels/BlockOut
+MRUItem3=/Game/Levels/Demo
+MRUItem4=/Game/Levels/texturedzoo
+MRUItem5=/Game/TopDownBP/Maps/TopDownExampleMap
+MRUItem6=/Game/Levels/MainMenu
+MRUItem7=/Game/Chloe/UI/Main_Menu_level/Main_Menu
+MRUItem8=/Game/Levels/TerrainMap
 
 [DetailCustomWidgetExpansion]
 CryptoKeysSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.SetDestination,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.MoveForward,InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings.TurnRate,InputSettings.Bindings.ActionMappings.Sprint,InputSettings.Bindings.ActionMappings.Interact,InputSettings.Bindings.ActionMappings.Pause,
@@ -244,10 +244,10 @@ AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
-ContentBrowserTab1.SelectedPaths=/Game/David-o020107h/Audio
+ContentBrowserTab1.SelectedPaths=/Game
 
 [EditorStartup]
-LastLevel=/Game/TopDownBP/Maps/TopDownExampleMap
+LastLevel=/Game/Levels/MechanicsLevel
 
 [AssetEditorManager]
 CleanShutdown=True
@@ -2512,6 +2512,18 @@ SoundCue.Concurrency=True
 SoundCue.Effects=True
 SoundCue.Info=True
 SoundNodeWavePlayer.WavePlayer=True
+SoundWave.Compression=True
+SoundWave.Streaming=True
+SoundWave.Quality=True
+SoundWave.Sound=True
+SoundWave.SoundWave=True
+SoundWave.Subtitles=True
+SoundWave.Info=True
+SoundWave.File Path=True
+SoundWave.Debug=True
+SoundWave.Concurrency=True
+SoundWave.Effects=True
+SoundWave.Attenuation=True
 
 [AssetEditorToolkitTabLocation]
 /Game/TopDownBP/Blueprints/TopDownGameMode.TopDownGameMode=0
@@ -2588,13 +2600,14 @@ SoundNodeWavePlayer.WavePlayer=True
 /Game/GW000979/DataStruct/WeaponInt.WeaponInt=0
 /Game/Chloe/UI/I_InventoryInterface.I_InventoryInterface=0
 /Game/David-o020107h/Audio/Egypt_intro_Cue.Egypt_intro_Cue=1
+/Game/David-o020107h/Audio/Egypt_intro.Egypt_intro=1
 
 [PluginBrowser]
 InstalledPlugins=Substance
 
 [DetailPropertyExpansion]
 EndUserSettings="\"Object.Privacy.bSendAnonymousUsageDataToEpic\" "
-Object="\"Object.AttenuationSettings.AttenuationOverrides.CustomLowpassAirAbsorptionCurve\" "
+Object=
 SphereComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 ShapeComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 PrimitiveComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
@@ -2692,7 +2705,7 @@ Info=
 TopDownCharacterCleaned_C="\"Object.CrystalPowerGeneration\" \"Object.CrystalPowerGeneration\" "
 Inventory_C=
 SoundCue="\"Object.AttenuationSettings.AttenuationOverrides.CustomLowpassAirAbsorptionCurve\" "
-SoundBase="\"Object.AttenuationSettings.AttenuationOverrides.CustomLowpassAirAbsorptionCurve\" "
+SoundBase=
 
 [DetailCategoriesAdvanced]
 TopDownCharacter_C.Collision=True
@@ -2718,7 +2731,7 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
-UNR=../../../../../../Users/c018840h/Documents/GitHub/SCollab-Proto/SP_Prototype/Content/TopDownBP/Maps
+UNR=../../../../../../Users/s017290g/Documents/GitHub/SCollab-Proto/SP_Prototype/Content/Levels
 BRUSH=../../../../../My Documents/Unreal Projects/SP_Prototype/Content/
 FBX=../../../../../My Documents/Unreal Projects/SP_Prototype/Content/
 FBXAnim=../../../../../My Documents/Unreal Projects/SP_Prototype/Content/
@@ -3512,26 +3525,26 @@ PaletteThumbnailScale=0.300000
 PreserveScaleRatio=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/David-o020107h/Audio/Egypt_intro_Cue
-MRUItem1=/Game/Levels/texturedzoo
+MRUItem0=/Game/Levels/MechanicsLevel
+MRUItem1=/Game/Levels/BlockOut
 MRUItem2=/Game/Levels/assetlayout
-MRUItem3=/Game/GW000979/DataStruct/BaseEquipment/BaseWeapon
-MRUItem4=/Game/GW000979/DataStruct/BaseEquipment/BaseArmour
-MRUItem5=/Game/GW000979/DataStruct/BaseEquipment/BaseAccessory
-MRUItem6=/Game/GW000979/DataStruct/BaseEquipment/BaseShield
-MRUItem7=/Game/GW000979/DataStruct/Structs/AccessoryStruct
-MRUItem8=/Game/GW000979/DataStruct/Structs/Armour_Struct
-MRUItem9=/Game/Chloe/UI/I_InventoryInterface
-MRUItem10=/Game/c024816h/PickUpInterface
-MRUItem11=/Game/GW000979/DataStruct/WeaponInt
-MRUItem12=/Game/GW000979/DataStruct/WeaponInt2
-MRUItem13=/Game/AIAgent/AIbot
-MRUItem14=/Game/AIAgent/BaseAI
-MRUItem15=/Game/GW000979/DataStruct/Inventory
-MRUItem16=/Game/TopDownBP/Blueprints/TopDownCharacter
-MRUItem17=/Game/TopDownBP/Blueprints/TopDownGameMode
-MRUItem18=/Game/TopDownBP/Blueprints/I_DeathSystem
-MRUItem19=/Game/TopDownBP/Blueprints/TopDownCharacterCleaned
+MRUItem3=/Game/Levels/Demo
+MRUItem4=/Game/Levels/texturedzoo
+MRUItem5=/Game/David-o020107h/Audio/Egypt_intro
+MRUItem6=/Game/David-o020107h/Audio/Egypt_intro_Cue
+MRUItem7=/Game/GW000979/DataStruct/BaseEquipment/BaseWeapon
+MRUItem8=/Game/GW000979/DataStruct/BaseEquipment/BaseArmour
+MRUItem9=/Game/GW000979/DataStruct/BaseEquipment/BaseAccessory
+MRUItem10=/Game/GW000979/DataStruct/BaseEquipment/BaseShield
+MRUItem11=/Game/GW000979/DataStruct/Structs/AccessoryStruct
+MRUItem12=/Game/GW000979/DataStruct/Structs/Armour_Struct
+MRUItem13=/Game/Chloe/UI/I_InventoryInterface
+MRUItem14=/Game/c024816h/PickUpInterface
+MRUItem15=/Game/GW000979/DataStruct/WeaponInt
+MRUItem16=/Game/GW000979/DataStruct/WeaponInt2
+MRUItem17=/Game/AIAgent/AIbot
+MRUItem18=/Game/AIAgent/BaseAI
+MRUItem19=/Game/GW000979/DataStruct/Inventory
 
 [WidgetTemplatesExpanded]
 Extra=False
